--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
   "author": "mamphis <mattis.wacker@pcsmw.de>",
   "license": "ISC",
   "dependencies": {
-    "markdown-it": "^13.0.1"
+    "ejs": "^3.1.8",
+    "express": "^4.18.1",
+    "markdown-it": "^13.0.1",
+    "monaco-editor": "^0.34.0"
   },
   "devDependencies": {
-    "@types/markdown-it": "^12.2.3"
+    "@types/express": "^4.17.14",
+    "@types/markdown-it": "^12.2.3",
+    "@types/node": "^18.7.18"
   }
 }
