--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "katex": "^0.16.2",
     "markdown-it": "^13.0.1",
     "markdown-it-texmath": "^1.0.0",
-    "monaco-editor": "^0.34.0"
+    "monaco-editor": "^0.34.0",
+    "socket.io": "^4.5.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
