--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "highlight.js": "^11.6.0",
     "katex": "^0.16.2",
     "markdown-it": "^13.0.1",
     "markdown-it-texmath": "^1.0.0",
