--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "markdown-it": "^13.0.1",
     "markdown-it-texmath": "^1.0.0",
     "monaco-editor": "^0.34.0",
-    "socket.io": "^4.5.2"
+    "socket.io": "^4.5.2",
+    "yaml": "^2.1.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
