--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@types/express": "^4.17.14",
     "@types/markdown-it": "^12.2.3",
-    "@types/node": "^18.7.18"
+    "@types/node": "^18.7.18",
+    "typescript": "^4.8.4"
   }
 }
