--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "mamphis <mattis.wacker@pcsmw.de>",
   "license": "ISC",
   "dependencies": {
+    "@mamphis/express-utils": "^1.0.5",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "highlight.js": "^11.6.0",
