--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "mamphis <mattis.wacker@pcsmw.de>",
   "license": "ISC",
   "dependencies": {
-    "@mamphis/express-utils": "^1.0.5",
+    "@mamphis/express-utils": "^1.1.0-3",
+    "cookie-parser": "^1.4.6",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "highlight.js": "^11.6.0",
@@ -22,6 +23,7 @@
     "yaml": "^2.1.1"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.14",
     "@types/markdown-it": "^12.2.3",
     "@types/node": "^18.7.18",
